worker/src/hivemind_worker/psutil.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */




/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern __declspec(dllexport) int get_cpu_count(void);
extern __declspec(dllexport) double get_cpu_percent(void);
extern __declspec(dllexport) long long unsigned int get_memory_total(void);
extern __declspec(dllexport) long long unsigned int get_memory_available(void);
extern __declspec(dllexport) double get_memory_percent(void);
extern __declspec(dllexport) int get_hostname_length(void);
extern __declspec(dllexport) int get_hostname_data(char* buf, int size);
extern __declspec(dllexport) int get_cpu_score(void);
extern __declspec(dllexport) double get_process_cpu_percent(int pid);
extern __declspec(dllexport) long long unsigned int get_process_rss_bytes(int pid);
extern __declspec(dllexport) int get_gpu_name_length(void);
extern __declspec(dllexport) int get_gpu_name_data(char* buf, int size);
extern __declspec(dllexport) double get_gpu_memory(void);
extern __declspec(dllexport) int get_gpu_score(void);
extern __declspec(dllexport) int get_gpu_available(void);

#ifdef __cplusplus
}
#endif